[package]
name = "rups"
version = "0.5.1"
authors = ["Aram Peres <aram.peres@wavy.fm>"]
edition = "2018"
description = "Network UPS Tools (NUT) client library"
categories = ["network-programming"]
keywords = ["ups", "nut", "tokio", "async"]
repository = "https://github.com/aramperes/nut-rs"
documentation = "https://docs.rs/rups"
readme = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shell-words = "1.0.0"
rustls = { version = "0.19", optional = true }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.21", optional = true }
tokio = { version = "1", optional = true, features = ["net", "io-util", "rt"] }
tokio-rustls = { version = "0.22", optional = true }

[features]
default = []
ssl = ["rustls", "rustls/dangerous_configuration", "webpki", "webpki-roots"]
async = ["tokio"]
async-ssl = ["async", "tokio-rustls", "ssl"]
# a feature gate for examples
async-rt = ["async", "tokio/rt-multi-thread", "tokio/macros"]

[[example]]
name = "async"
required-features = ["async-rt"]

[package.metadata.docs.rs]
all-features = true
