[package]
name = "rupsc"
version = "0.6.0"
authors = ["Aram Peres <aram.peres@wavy.fm>"]
edition = "2021"
description = "A demo program to display UPS variables"
categories = ["network-programming"]
keywords = ["ups", "nut"]
repository = "https://github.com/aramperes/nut-rs"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1"

[dependencies.rups]
version = "0.6.0"
path = "../rups"
features = ["ssl"]
